force-app/main/default/objects/Front_End_User__c/Front_End_User__c.object-meta.xml
<CustomObject>
    <label>Front End User</label>
    <nameField>
        <label>Front End User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Front End Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>