force-app/main/default/objects/Front_End_User__c/fields/all_facilities__c.field-meta.xml
<CustomField>
    <fullName>all_facilities__c</fullName>
    <defaultValue>false</defaultValue>
    <label>all facilities</label>
    <type>Checkbox</type>
</CustomField>