force-app/main/default/objects/Front_End_User__c/fields/FruMFA_User_ID__c.field-meta.xml
<CustomField>
    <fullName>FruMFA_User_ID__c</fullName>
    <label>FruMFA User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>