force-app/main/default/objects/Front_End_User__c/fields/Login_Code__c.field-meta.xml
<CustomField>
    <fullName>Login_Code__c</fullName>
    <label>Login Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>