force-app/main/default/objects/Front_End_User__c/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <label>Timezone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>America/NewYork</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>